--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,8 @@ dev_dependencies:
   riverpod_generator: ^2.6.5
   freezed: ^3.1.0
   json_serializable: ^6.9.5
+  mocktail: ^1.0.4
+  http_mock_adapter: ^0.6.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
